--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon src/index.js",
     "db:create": "npx sequelize-cli db:create",
     "db:migrate": "npx sequelize-cli db:migrate",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/user.test.js --exit"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +20,9 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5"
+  },
+  "devDependencies": {
+    "mocha": "^9.0.3",
+    "supertest": "^6.1.5"
   }
 }
