--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js",
     "db:create": "npx sequelize-cli db:create",
     "db:migrate": "npx sequelize-cli db:migrate",
+    "db:seed": "npx sequelize-cli db:seed:all",
     "test": "mocha test/user.test.js --exit"
   },
   "author": "",
